...
                }
            )
        },
        floatingActionButton = {
            ExtendedFloatingActionButton(
                onClick = onFabClicked,
                icon = { Icon(imageVector = Icons.Default.Add, contentDescription = "Add") },
                text = { Text(text = "Add Task") },
                expanded = isFABExpanded
            )
        },
        modifier = modifier
    ) { contentPadding ->
...
